Create template for person of metafour-starter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,21 @@ resort.name.label=Name
 resort.destination.label=Destination
 resort.departure.label=Departure Ports
 resort.arrival.label=Arrival Ports
+
+
+
+person.title=Person screen title
+person.brand=Person
+person.id=Id
+person.name=Name
+person.dob=Date Of birth
+person.sex=Sex
+person.maritalstatus=Marital status
+person.highestdegree=Highest degree
+person.addess=Address
+person.city=City
+person.courses=Courses
+person.trainingdates=Training dates
+person.sex.male=Male
+person.sex.female=Female
+
