Create a Student for metafour-starter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,3 +30,53 @@ person.trainingdates=Training dates
 person.sex.male=Male
 person.sex.female=Female
 
+
+
+## Student  details label
+
+student.title=Student screen title
+student.brand=Student
+student.id.label=Id
+student.name.label=Name
+student.fathername.label=Father's name
+student.dob.label=Date Of birth
+student.gender.label=Gender
+student.gender.male.label=Male
+student.gender.female.label=Female
+student.maritalstatus.label=Marital status
+student.contactnumber.label=Contact number
+student.nid.label= National id
+student.email.label= Email
+student.highestdegree=Highest degree
+student.addess=Address
+student.dist.label= District
+student.thana.label= Thana
+student.post.label= Post
+student.vill.label= Village
+student.roadno.label= Road no.
+student.hoseno.label= House no.
+student.educationallabel.label= Educational label
+student.institute.label= Institute
+student.subject.label= Subject
+student.result.label= Result
+student.passingyear.label= Passing Year
+student.boaruni.label= Board/University
+student.planguage.label= Programming Language
+student.city=City
+student.courses=Courses
+student.trainingdates=Training dates
+student.gender.male.label=Male
+student.gender.female.label=Female
+
+
+
+
+
+
+
+
+
+
+
+
+
