Add stdent for Metaffour-starter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+## Action label
 action.create=Create
 action.add=Add
 action.update=Update
@@ -5,6 +6,7 @@ action.save=Save
 action.cancel=Cancel
 
 
+## Resort  details label
 resort.title=Resort screen title
 resort.brand=Resort Maintenance
 resort.code.label=Code
@@ -14,7 +16,7 @@ resort.departure.label=Departure Ports
 resort.arrival.label=Arrival Ports
 
 
-
+## Person  details label
 person.title=Person screen title
 person.brand=Person
 person.id=Id
@@ -31,9 +33,7 @@ person.sex.male=Male
 person.sex.female=Female
 
 
-
 ## Student  details label
-
 student.title=Student screen title
 student.brand=Student
 student.id.label=Id
@@ -67,16 +67,4 @@ student.courses=Courses
 student.trainingdates=Training dates
 student.gender.male.label=Male
 student.gender.female.label=Female
-
-
-
-
-
-
-
-
-
-
-
-
 
